--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Hello World</title>
+		<img src="smiley.jpg" alt="Smiley face" height="420" width="420">
 	</head>
 	<body bgcolor="purple">
 		<h1>Hello World</h1>
