--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
 		<title>Hello World</title>
 		<img src="smiley.jpg" alt="Smiley face" height="420" width="420">
 		<iframe width="1206" height="678" src="https://www.youtube.com/embed/L054Xd97_rk?t=180" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<video width="320" height="240" controls>
+			<source src="movie1.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		  </video>
+		  <audio controls>
+			<source src="sample.mp3" type="audio/mp3">
+			Your browser does not support the audio tag.
+			</audio>
+			<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20washington&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/promo-codes/dribble-up/"></a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
 	</head>
 	<body bgcolor="purple">
 		<h1>Hello World</h1>
+		<object data= 
+	"https://upload.wikimedia.org/wikipedia/commons/f/f1/Sample_of_collaborative_editing_using_google_doc.png"
+				width="550px" height="150px">GeeksforGeeks</object> 
 	</body>
 </html>
 
